--- a/markdown_mathjax_demo.yml
+++ b/markdown_mathjax_demo.yml
@@ -4,6 +4,8 @@ tags:
 - Misc
 - MarkdownAndMathJaxDemos
 
+markdownTabLength: 2
+
 notes:
 
 - Front: |
@@ -12,13 +14,13 @@ notes:
     This is some _Markdown_-formatted text.
 
     - This is a Markdown list.
-        - This is a nested list.
+      - This is a nested list.
     - Note: $\LaTeX$ works.
 
   Back: |
       - This is another Markdown list.
-          - This is a nested list.
-            $$\textrm{This is an equation:} \sum \limits_{n=0}^\infty a_n$$
+        - This is a nested list.
+          $$\textrm{This is an equation:} \sum \limits_{n=0}^\infty a_n$$
 - Front: |
     MathJax/Markdown:
     
