--- a/Code/Algorithms/Books/AlgorithmsForInterviews/01-01_searching_binary-search.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/01-01_searching_binary-search.yml
@@ -20,7 +20,7 @@ notes:
 
     Implement a fast integer square root function that takes in a 32-bit unsigned integer and returns another 32-bit unsigned integer that is the floor of the square root of the input.
 
-    &mdash; Aziz and Prakash; *Algorithms for Interviews*; version 1.0.0 (September 1, 2010); pp 14-6.
+    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); pp 14-6.
 
   Python: |
     - Clarify: for 9 through 15, this would return 3.
@@ -67,7 +67,7 @@ notes:
 
     Write a method that takes a sorted array \\(A\\) of integers and a key \\(k\\) and returns the index of first occurrence of \\(k\\) in \\(A\\). Return \\(-1\\) if \\(k\\) does not appear in \\(A\\). Write tests to verify your code.
 
-    &mdash; Aziz and Prakash; *Algorithms for Interviews*; version 1.0.0 (September 1, 2010); p 6.
+    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
 
   Python: |
     **To-do.**
@@ -84,7 +84,7 @@ notes:
 
     Design an efficient algorithm that finds the index of the first occurrence of an element larger than a specified key \\(k\\); return -1 if every element is less than or equal to \\(k\\).
 
-    &mdash; Aziz and Prakash; *Algorithms for Interviews*; version 1.0.0 (September 1, 2010); p 6.
+    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
 
   Python: |
     **To-do.**
@@ -101,7 +101,7 @@ notes:
 
     Suppose that in addition to being sorted, the entries of \\(A\)) are distinct integers. Design an efficient algorithm for finding an index \((i\)) such that \\(A[i]=i\\) or indicating that no such index exists.
 
-    &mdash; Aziz and Prakash; *Algorithms for Interviews*; version 1.0.0 (September 1, 2010); p 6.
+    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
 
   Python: |
     **To-do.**
