--- a/Code/Algorithms/Books/AlgorithmsForInterviews/01-01_searching_binary-search.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/01-01_searching_binary-search.yml
@@ -6,7 +6,7 @@ tags:
 - Books
 - AlgorithmsForInterviews
 - 01-Searching
-- 01-01-BinarySearch
+- 01a-BinarySearch
 
 markdownTabLength: 4
 
@@ -14,13 +14,13 @@ notes:
 
 
 - Front: |
-    ## 1.1: Computing square roots
+    ## 01.01: Computing square roots
 
     Square root computations can be implemented using sophisticated numeric techniques involving iterative methods and logarithms. However if you were asked to implement a square root function, you would not be expected to know these techniques.
 
     Implement a fast integer square root function that takes in a 32-bit unsigned integer and returns another 32-bit unsigned integer that is the floor of the square root of the input.
 
-    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); pp 14-6.
+    --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); pp 14-6.
 
   Python: |
     - Clarify: for 9 through 15, this would return 3.
@@ -48,7 +48,7 @@ notes:
               lower = mid+1
               last_guess = lower - 1
           return last_guess
-  
+
         for x in range(10001):
           expected = int(x**0.5)
           actual = sqrt_floor(x)
@@ -56,58 +56,58 @@ notes:
     ```
 
   Java: |
-    **To-do.**
+    **To-do: Java.**
 
   C++: |
-    **To-do.**
+    **To-do: C++.**
 
 
 - Front: |
-    ## 1.2: Search a sorted array for \\(k\\)
+    ## 01.02: Search a sorted array for \\(k\\)
 
     Write a method that takes a sorted array \\(A\\) of integers and a key \\(k\\) and returns the index of first occurrence of \\(k\\) in \\(A\\). Return \\(-1\\) if \\(k\\) does not appear in \\(A\\). Write tests to verify your code.
 
-    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
+    --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 16.
 
   Python: |
-    **To-do.**
+    **To-do: Python.**
 
   Java: |
-    **To-do.**
+    **To-do: Java.**
 
   C++: |
-    **To-do.**
+    **To-do: C++.**
 
 
 - Front: |
-    ## 1.3: Search a sorted array for the first element larger than \\(k\\)
+    ## 01.03: Search a sorted array for the first element larger than \\(k\\)
 
     Design an efficient algorithm that finds the index of the first occurrence of an element larger than a specified key \\(k\\); return -1 if every element is less than or equal to \\(k\\).
 
-    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
+    --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 16.
 
   Python: |
-    **To-do.**
+    **To-do: Python.**
 
   Java: |
-    **To-do.**
+    **To-do: Java.**
 
   C++: |
-    **To-do.**
+    **To-do: C++.**
 
 
 - Front: |
-    ## 1.4: Search a sorted array for \\(A[i]=i\\)
+    ## 01.04: Search a sorted array for \\(A[i]=i\\)
 
     Suppose that in addition to being sorted, the entries of \\(A\)) are distinct integers. Design an efficient algorithm for finding an index \((i\)) such that \\(A[i]=i\\) or indicating that no such index exists.
 
-    &mdash; Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 6.
+    --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 16.
 
   Python: |
-    **To-do.**
+    **To-do: Python.**
 
   Java: |
-    **To-do.**
+    **To-do: Java.**
 
   C++: |
-    **To-do.**
+    **To-do: C++.**
