--- a/Code/Algorithms/Books/AlgorithmsForInterviews/02a_sorting_noncode.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/02a_sorting_noncode.yml
@@ -24,5 +24,7 @@ notes:
     - A large collection of numbers most of which are duplicates.
     - Stability is required, i.e., the relative order of two records that have the same sorting key should not be changed.
 
+    --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 23-4.
+
   Back: |
     **To-do: Noncode back.**
